--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
+  "name": "todo-list-api",
+  "type": "module",
+  "version": "1.0.0",
+  "emitDecoratorMetadata": true,
+  "experimentalDecorators": true,
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mysql2": "^3.11.0",
+    "node-fetch": "^3.3.2",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "sqlite3": "^5.1.7",
+    "typedi": "^0.10.0",
     "underscore": "^1.13.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "babel-preset-es2024": "^0.0.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "gulp": "^5.0.0",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^6.0.0",
+    "nodemon": "^3.1.4"
   }
 }
