--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "inversify": "^6.0.2",
     "mysql2": "^3.11.0",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
