--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "inversify": "^6.0.2",
+    "inversify-inject-decorators": "^3.1.0",
     "mysql2": "^3.11.0",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
@@ -23,13 +25,15 @@
     "underscore": "^1.13.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^9.9.1",
     "babel-preset-es2024": "^0.0.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^6.0.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "3.3.3"
   }
 }
