--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "experimentalDecorators": true,
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -25,15 +26,19 @@
     "underscore": "^1.13.7"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@babel/preset-env": "^7.25.4",
     "@eslint/js": "^9.9.1",
     "babel-preset-es2024": "^0.0.0",
     "eslint": "^9.9.1",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^6.0.0",
     "nodemon": "^3.1.4",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "ts-mockito": "^2.6.1"
   }
 }
